@@ -7,16 +7,26 @@ public class TabulationSettings {
 	String yDim;
 
 	String groupBy;
+
+	String filterBy;
 	
-	public TabulationSettings(String filter, String partition, String rank) {
-		this.xDim = filter;
-		this.yDim = partition;
-		this.groupBy = rank;
+	boolean noIntersectX;
+	
+	boolean noIntersectY;
+
+	public TabulationSettings(String xDim, String yDim, String groupBy, String filterBy, 
+		boolean noIntersectX, boolean noIntersectY) {
+		this.xDim = xDim;
+		this.yDim = yDim;
+		this.groupBy = groupBy;
+		this.filterBy = filterBy;
+		this.noIntersectX = noIntersectX;
+		this.noIntersectY = noIntersectY;
 	}
 
 	public String toString() {
-		return String.format("X: %s\nY: %s\nGroup by: %s", xDim, yDim,
-			groupBy);
+		return String.format("X: %s     Y: %s     Group by: %s    Filter: %s    Show no intersect: %b %b", xDim, yDim, groupBy,
+			filterBy, noIntersectX, noIntersectY);
 	}
 
 	@Override
@@ -27,7 +37,12 @@ public class TabulationSettings {
 			return false;
 		if (getClass() != obj.getClass())
 			return false;
+		
 		final TabulationSettings other = (TabulationSettings) obj;
+		
+		if (this.noIntersectX != other.noIntersectX || this.noIntersectY != other.noIntersectY)
+			return false;
+		
 		if (xDim == null) {
 			if (other.xDim != null)
 				return false;
@@ -43,6 +58,13 @@ public class TabulationSettings {
 				return false;
 		} else if (!groupBy.equals(other.groupBy))
 			return false;
+
+		if (filterBy == null) {
+			if (other.filterBy != null)
+				return false;
+		} else if (!filterBy.equals(other.filterBy))
+			return false;
+
 		return true;
 	}
 
